added meal plans collection and docs with recipes - Efrain O.
